import "Vector.proto";

message TileMsg
{
  required int32 tag = 1;
  required VectorMsg position = 2;
  required float height = 3;
}
